# ai_sprint

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: session-handoff.md
ai_sprint/: __init__.py  __main__.py
ai_sprint/cli/: __init__.py  main.py  utils.py
ai_sprint/cli/commands/: __init__.py  config.py  health.py  install.py  logs.py  start.py  status.py  stop.py
ai_sprint/config/: __init__.py  defaults.py  settings.py
ai_sprint/core/: __init__.py  cab.py  developer.py  librarian.py  manager.py  refinery.py  tester.py
ai_sprint/models/: __init__.py  agent_session.py  convoy.py  event.py  feature.py  task.py
ai_sprint/services/: __init__.py  convoy_allocator.py  health_monitor.py  quality_gates.py  session_manager.py  state_manager.py  worktree_manager.py
ai_sprint/utils/: __init__.py  git.py  logging.py
artifacts/: 20260125_1804_handoff.md  20260125_1922_handoff.md  AI_SPRINT_SPECIFICATION_v1.0.md  answers_after_gas_town_investigation.md  questions_for_specification.md  topic1_infrastructure_LOCKED.md  topic2_quality_gates_LOCKED.md  topic3_coordination_LOCKED.md
config/: ai-sprint.example.toml
docs/: architecture.md  configuration.md  installation.md
scripts/: health-check.sh  install.sh
specs/001-ai-sprint-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-sprint-system/checklists/: requirements.md
specs/001-ai-sprint-system/contracts/: cli-commands.md
